<resources>
    <string name="app_name">CoroutinePlayground2</string>
    <string name="basics">Basics</string>
    <string name="asyn">Asyn</string>
    <string name="loading">Loading</string>
    <string name="dispatcher">Dispatcher</string>
    <string name="result">Result</string>
    <string name="io_dispatchers">IO Dispatchers</string>
    <string name="default_dispatchers">Default</string>
    <string name="starting">Starting</string>
    <string name="calculating">calculating</string>
    <string name="cancellation">Cancellation</string>
    <string name="start_download">Start Download</string>
    <string name="stop_download">Stop Download</string>
    <string name="download_cancelled">Download Cancelled</string>
    <string name="timeout">Timeout</string>
    <string name="start">Start</string>
    <string name="start_with_null">StartWithNull</string>
    <string name="retry">Retry</string>
    <string name="retry_again">Retry Again</string>
</resources>